<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">



    <TextView
        android:id="@+id/drug_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.70"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/drug_name"
            android:hint="@string/drug_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/drug_id"
            android:hint="@string/drug_id_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/drug_standard"
            android:hint="@string/drug_standard_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/add_drug_button"
                android:text="@string/add_drug_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/check_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_all"
                />

            <Button
                android:id="@+id/get_data_from_net"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_data_from_net"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
